# eos-sar

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  MANIFEST.in  NOTICE  README.md  cliff.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: border_masking_grd.md  index.md
eos/: cache.py  dem.py
eos/products/capella/: __init__.py  assembler.py  metadata.py  product.py  proj_model.py
eos/products/cosmoskymed/: __init__.py
eos/products/sentinel1/: __init__.py  _calibration.pyx  acquisition.py  assembler.py  border_noise_grd.py  burst_mod.py  burst_model.py  burst_resamp.py  calibration.py  catalog.py  coordinate_correction.py  deburst.py  doppler_info.py  grd_cropper.py  grd_rtc_slicing.py  io.py  metadata.py  mosaic.py  mosaic_zoom.py  orbit_catalog.py  orbits.py  overlap.py  product.py  proj_model.py  regist.py  srgr.py
eos/products/snap/: __init__.py
eos/products/terrasarx/: __init__.py  cropper.py  metadata.py  model.py
eos/sar/: __init__.py  _phase_correlation.py  atmospheric_correction.py  backproj.py  burst.py  cheb.py  coherence.py  const.py  coordinates.py  dem_to_radar.py  fourier_zoom.py  geoconfig.py  geom_phase.py  goldstein_filter.py  io.py  max_finding.py  mod.py  model.py  model_helper.py  orbit.py  ortho.py  poly.py  projection_correction.py  range_doppler.py  regist.py  roi.py  roi_provider.py  rtc.py  simulator.pyx  srgr.py  terrain_flattening_cython.pyx  unwrapping.py  utils.py
src/eos/: cache.py  dem.py
src/eos/products/: __init__.py  los.py
src/eos/sar/: __init__.py  approx_los_track.py  atmospheric_correction.py  cheb.py  const.py  dem_to_radar.py  geoconfig.py  goldstein_filter.py  io.py  model.py  model_helper.py  mysimulator.py  orbit.py  ortho.py  poly.py  range_doppler.py  regist.py  roi_provider.py  rtc.py  simulator.pyx  unwrapping.py  utils.py
src/teosar/: __init__.py  inout.py  pairs.py  periodogram.py  periodogram_cl.py  prepare_overlap_db.py  psutils.py  tsinsar.py  utils.py  workflow.py
teosar/: __init__.py  center_surround.py  ferreti_2001.py  inout.py  neighbors.py  overlap_utils.py  pairs.py  periodogram.cl  periodogram.py  periodogram_cl.py  periodogram_par.py  plot.py  prepare_overlap_db.py  psc.py  psutils.py  tsinsar.py  utils.py  workflow.py
test/: README.md  fetch_dem.py  get_corresponding_image.py  terrain_flattening.py
test/rois/: iw2_bid5.json  iw2_bid6.json
tests/: conftest.py  projection_vs_s1m.py  test_S1_metadata.py  test_assembler.py  test_cache.py  test_calibration.py  test_capella_deramp_crop.py  test_capella_metadata.py  test_capella_proj_model.py  test_coherence.py  test_dem.py  test_fourier_zoom.py  test_geom_phase.py  test_goldstein.py  test_grd_cropper.py  test_localize_without_alt.py  test_mask_border_noise_grd.py  test_max_finding.py  test_nisar_cropper.py  test_nisar_metadata.py  test_nisar_proj_model.py  test_orbit.py  test_ortho.py  test_periodogram_cl_par.py  test_poly_prediction.py  test_projection.py  test_projection_vs_s1m.py  test_radarcoding.py  test_resampling_stitching.py  test_rtc.py  test_s1_catalog.py  test_s1_orbit.py  test_s1_productinfo.py  test_tsinsar.py  test_tsx_metadata.py  test_unwrap_mcf.py
tests/data/: California_2020-02-29_crdat.csv  QLD_corner_reflector_positions_GDA2020.txt  S1A_IW_GRDH_1SDV_20220609T022354_20220609T022419_043580_053410_DF62-vv-annotation.xml  S1A_IW_SLC__1SDV_20230109T171148_20230109T171218_046710_059965_97A3-002.xml  TDX1_SAR__SSC______SM_S_SRA_20200722T141112_20200722T141120.xml  s1a-iw3-slc-vv-20190809t164050-20190809t164115-028495-033896-006.xml  s1b-iw3-slc-vv-20190803t164007-20190803t164032-017424-020c57-006.xml
tests/data/bid-hard-cases/: S1A_IW_SLC__1SDV_20210503T092858_20210503T092925_037721_04739E_E39D_iw1.xml  S1A_IW_SLC__1SDV_20210503T092858_20210503T092925_037721_04739E_E39D_iw2.xml  S1A_IW_SLC__1SDV_20210503T092858_20210503T092925_037721_04739E_E39D_iw3.xml  S1A_IW_SLC__1SDV_20210601T093558_20210601T093628_038144_048088_A82E_iw1.xml  S1A_IW_SLC__1SDV_20210601T093558_20210601T093628_038144_048088_A82E_iw2.xml  S1A_IW_SLC__1SDV_20210601T093558_20210601T093628_038144_048088_A82E_iw3.xml  S1A_IW_SLC__1SDV_20210601T093806_20210601T093835_038144_048088_B9B1_iw1.xml  (+62 more)
tools/: download_from_asf.py
usage/: access_to_cdse.py  burst_physical_sensor_model.py  burst_registration.py  burst_registration_inside.py  capella.py  csk.py  download_pair.py  grd.py  localize_without_height.py  nisar-simulation.py  overlaps_registration.py  predict_phase_corrections.py  radarcode.py  s1-slc-crop-simulation.py  secondary_image_debursting.py  single_image_debursting.py  swath_ts_regist_deburst.py  teosar_s1c_s1a.py  tsx.py  tutorial.ipynb  tutorial.py  zoom.py
usage/periodogram/: periodo_ex.py  threeparamsimu.json
(+52 files in other folders)
