[project]
name = "kayrros-eos-sar"
authors = [
    { name = "Kayrros"},
    { name = "external collaborators" },
]
version = "0.39.0"
requires-python = ">=3.9,<3.14"
dependencies = [
    "numpy>=2.0.1",
    "python-dateutil>=2.9.0",
    "xmltodict>=0.14.0",
    "lxml>=5.3.1",
    "pyproj>=3.5.0",
    "opencv-python-headless>=4.11.0",
    "shapely>=2.0.4",
    "scipy (>=1.13.0, !=1.15.0.*,!=1.15.1,!=1.15.2)",  # Exclude certain versions, see https://github.com/Kayrros/eos-sar/issues/173
    "rasterio>=1.4.0",
    "ortools>=9.7.0",
    "requests>=2.32.3",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
teosar = [
    "tqdm>=4.67.0",
    "tifffile>=2024.1.0",
    "tensorflow-probability[tf]>=0.24.0",  # see https://github.com/tensorflow/probability/releases/tag/v0.24.0
    "siphash24>=1.0",  # pytools is required by pyopencl, and gives a warning: RecommendedHashNotFoundWarning: Unable to import recommended hash 'siphash24.siphash13',
    "pyopencl>=2025.1",
]
teosar-light = [
    "tqdm>=4.67.0",
    "tifffile>=2024.1.0",
]
kayrros = [
    "s1m>=1.3.4",
    "multidem>=0.7.1",
    "kayrros-phoenix[source-s3,plugin-burster]>=1.14.1",
    "kayrros-osio>=0.3.0",
    "kayrros-burster>=1.0.0",
    "kayrros-bursterio>=0.2.0",
]

[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    # linting
    "ruff>=0.8.5",
    # mypy
    "mypy>=1.14.1",
    "types-python-dateutil>=2.9.0",
    "types-requests>=2.30.0",
    "types-setuptools>=69.2.0.20240317",
    # testing
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    # dem sources
    "srtm4[crop]>=1.2.5",
    "dem-stitcher>=2.5.12",
    # network access
    "boto3>=1.34.133",
    # usage/
    "fire>=0.6.0",
]

[tool.uv.sources]
s1m = { index = "kayrros" }
multidem = { index = "kayrros" }
kayrros-osio = { index = "kayrros" }
kayrros-phoenix = { index = "kayrros" }
kayrros-burster = { index = "kayrros" }
kayrros-bursterio = { index = "kayrros" }

[[tool.uv.index]]
name = "kayrros"
url = "https://pypi.dev-kayrros.ovh/"
# Explicit means that the official PyPI will be used by default, except
# when 'kayrros' is specified in tool.uv.sources.
explicit = true

[tool.ruff]
line-length = 88
target-version = "py39"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # defaults
    "F",
    "E",
    # isort
    "I001",
]
ignore = [
    "E741",  # Ambiguous variable name
    # line too long; ruff will still format what it can anyway
    # so this mostly to avoid triggers on comments
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]  # it's OK if imports are not at the top of the file for notebooks

[tool.mypy]
install_types = true
ignore_missing_imports = true
check_untyped_defs = true
allow_redefinition = true
pretty = true
python_version = "3.9"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]
